examples/test/testpolicy11717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11717
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key37: value41
      key41: value13
      key40: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value42
      podSelector:
        matchLabels:
          key6: value37
          key10: value33
